k8_manifests/istio/prod-blue-green/jwt-request-authentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication

metadata:
  name: jwt-auth
  namespace: prod-blue-green

# below are dummy values.
spec:
  jwtRules:
  - issuer: "https://issuer.example.com"
    jwksUri: "https://issuer.example.com/.well-known/jwks.json"
