k8_manifests/istio/prod-blue-green/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: peer-authentication
  namespace: prod-blue-green
spec:
  mtls:
  #  mode: STRICT
    mode: PERMISSIVE
