k8_manifests/istio/prod-blue-green/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: prod-blue-green-gateway
  namespace: prod-blue-green
spec:
  selector:
    istio: ingressgateway

  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP

    hosts:
    - prod-blue-green.internal
