k8_manifests/istio/prod-blue-green/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: dr-for-frontend-service
  namespace: prod-blue-green
spec:
  host: blue-green-frontend-service

  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green

  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

    connectionPool:
      tcp:
        maxConnections: 100

      http:
        http1MaxPendingRequests: 50
        maxRequestsPerConnection: 10

    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: dr-for-backend-service
  namespace: prod-blue-green
spec:
  host: blue-green-backend-service
  
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green 

  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

    connectionPool:
      tcp:
        maxConnections: 100

      http:
        http1MaxPendingRequests: 50
        maxRequestsPerConnection: 10

    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
