k8_manifests/istio/prod-blue-green/local-rate-limit.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: local-rate-limit
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway

  configPatches:

  - applyTo: HTTP_FILTER

    match:
      context: GATEWAY

      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager

    patch:
      operation: INSERT_BEFORE

      value:
        name: envoy.filters.http.local_ratelimit

        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit

          stat_prefix: http_local_rate_limiter
# 5 request per minute:
          token_bucket:
            max_tokens: 5
            tokens_per_fill: 5
            fill_interval: 60s

          filter_enabled:
            runtime_key: local_rate_limit_enabled
            default_value:
# numerator 100 means entire 100 % traffic would use rate limiting.            
              numerator: 100
              denominator: HUNDRED
# here numerator 100 means block all 100 % traffic after the above token exhaustion which is 5, this good for canary setup.
          filter_enforced:
            runtime_key: local_rate_limit_enforced
            default_value:
              numerator: 100
              denominator: HUNDRED
