k8_manifests/istio/prod-blue-green/jwt-authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy

metadata:
  name: require-jwt
  namespace: prod-blue-green

spec:
  action: ALLOW

  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
